tests/resource/invalid/type/class/top_level_class_not_assigned_to.mamba
class X
    def y: Int
    def z: Int

    def __init__(self, x: Int) =>
        self.y := x
